--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -243,7 +243,7 @@
 
 <header>
   <nav>
-    <a href="/blog  class="{% if page.nav == 'blog' %}active{% endif %}">Daily Insider Filings Review</a>   <!-- 👈 this is the “tab” -->
+    <a href="/blog" class="{% if page.nav == 'blog' %}active{% endif %}">Daily Insider Filings Review</a>   <!-- 👈 this is the “tab” -->
   </nav>
 </header>
 
