--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>{{ InsiderIQ Pro Daily Insider Filings Review }}</title>
+  <title>{{ page.title }} | InsiderIQ Pro's Daily Insider Filings Summary</title>
 </head>
 <body>
 
