--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -244,6 +244,12 @@
             text-decoration: none;
             padding: 6px 10px;
         }
+        .site-nav a {
+            pointer-events: auto !important;
+            z-index: 9999;
+            position: relative;
+        }
+
 
 /* Hover */
         .site-nav a:hover {
