--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -280,7 +280,7 @@
 <header class="site-header">
   <nav class="site-nav">
     <div class="nav-right">
-      <a href="{{ site.baseurl }}/blog" class="{% if page.nav == 'blog' %}active{% endif %}">
+      <a href="{{ '/blog/' | relative_url }}" class="{% if page.nav == 'blog' %}active{% endif %}">
         Daily SEC Form 4 Filings Summary
       </a>
     </div>
